--- a/media/css/new_style.css
+++ b/media/css/new_style.css
@@ -119,7 +119,6 @@ em {
 	color: #282725;
 }
 #tracelite_version h4 {
-	background: url('../img/layout/tracelite-footer.gif') no-repeat;
 	height: 11px;
 	display: block;
 	margin: 5px 0px 2px 0px;
@@ -567,6 +566,12 @@ a.settings_details, a.copy, a.divide,a.aggregate {
 a.hide, a.expand {
 	margin-top: -2px;
 	line-height: 25px;
+}
+a.sifac {
+  color: #f42514;
+}
+a.xlab {
+  color: #18a70b;
 }
 
 a.mail_title {
@@ -1106,4 +1111,14 @@ div.order textarea {
 
 form#credit_form, form#debit_form {
 	display: none;
+}
+
+ul#sortable {
+  list-style-type: decimal;
+}
+ul#sortable li {
+  float: left;
+  margin-left: 0px;
+  margin-right: 40px;
+  padding: 5px;
 }
