--- a/templates/budget/form_credit.html
+++ b/templates/budget/form_credit.html
@@ -1,27 +1,18 @@
-{% extends "main_custom.html" %}
-
-{% block menu_budgets %}selected{% endblock %}
-
-{% block buttons %}
-<div class="btn_wrapper">
-  <a href="{% url budgets %}" class="btn_big">
-    <img src="{{ MEDIA_URL }}img/icons/coins.png" />Retour liste des budgets
-  </a>
-</div>
+{% extends "base_budgets.html" %}
+{% block menu_budget %}selected{% endblock %}
+{% block header %}
+<h1>Gestion des budgets</h1>
+<h2>Crédit sur le budget {{ budget.name }} (équipe {{ budget.team }})</h2>
 {% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Crédit sur le budget {{ budget.name }} (équipe {{ budget.team }})</h2></div>
-  <form action="{% url credit_budget budget.id %}" method="post">{% csrf_token %}
-    <input type="hidden" name="budget" value="{{budget.name}}" />
-    <p class="instructions">
-      <em>Les champs marqués d'une étoile sont obligatoires</em>
-    </p>
-    {% for field in form %}
-        {% include "form_snippet.html"%}
-    {% endfor %}
-    <button type="submit" class="check">Valider</button>
-  </form>
-</div>
+<form action="{% url credit_budget budget.id %}" method="POST">{% csrf_token %}
+	<input type="hidden" name="budget" value="{{budget.name}}" />
+	<p class="instructions">
+		<em>Les champs marqués d'une étoile sont obligatoires</em>
+	</p>
+	{% for field in form %}{% include "form_snippet.html"%}{% endfor %}
+	<button type="submit" class="check">Valider</button>
+	<a href="{{ prev }}" class="back">Retour</a>
+</form>
 {% endblock %}
