--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -1,7 +1,7 @@
 {% extends "base_budgets.html" %}
 {% load paginator filters %}
 
-{% block menu_budget_lines %}active{% endblock %}
+{% block menu_budget %}active{% endblock %}
 
 {% block header %}
 	{% if budget %}
@@ -17,12 +17,12 @@
 				</a>
 			</div>
 		{% endif %}
-		<div class="btn_wrapper">
-			<a href="{% url budgetlines %}" class="btn_big">
-				<img src="{{ MEDIA_URL }}img/icons/magnifier.png" />Détail de tous les budgets
-			</a>
-		</div>
 	{% endif %}
+	<div class="btn_wrapper">
+		<a href="{% url budgetlines %}" class="btn_big">
+			<img src="{{ MEDIA_URL }}img/icons/magnifier.png" />Détail de tous les budgets
+		</a>
+	</div>
 	<h1>Gestion des budgets</h1>
 {% endblock %}
 
@@ -34,7 +34,7 @@
 {% for team in team_list %}
 <h2>Equipe {{ team.grouper }}</h2>
 {% regroup team.list by budget as budget_list %}
-<table class="list">
+<table class="list" style="margin-bottom:20px">
 	<thead>
 		<th>budget</th>
 		<th>cmde</th>
@@ -84,7 +84,7 @@
 				<td><strong>{{ budget_line.get_amount_left }}</strong></td>
 				{% if user|has_perm:"budget.custom_edit_budget" %}
 					<td style="white-space:nowrap">
-						<a href="{% url budgetline_item budget_line.id %}" class="pencil no-text"></a>
+						<a href="{% url budgetline_item budget_line.id %}?{{search_args}}" class="pencil no-text"></a>
 						<a href="{% url budgetline_delete budget_line.id %}" class="trash confirmDel no-text"></a>
 					</td>
 				{% endif %}
@@ -93,6 +93,8 @@
 		{% endfor %}
 	</tbody>
 </table>
+{% empty %}
+<h2>Aucun résultat pour cette recherche.</h2>
 {% endfor %}
 
 <div id="confirmDel" class="dialog" title="Confirmer la suppression">
