--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -145,9 +145,7 @@
 	<a href="{% url set_next_status order.id %}?next=tab_validation" class="next-status save-changes">Valider la commande</a>
 {% else %}{% if order.status == 2 and user|has_perm:"order.custom_goto_status_3" %}
 	<a href="{{ order.get_absolute_url }}" class="disk save-changes">Enregistrer les modifications</a>
-	<a href="{% url set_next_status order.id %}" class="next-status save-changes">
-		Pour saisie {% if order.budget.budget_type == 0 %}XLAB{% else %}SIFAC{% endif %}
-	</a>
+	<a href="{% url set_next_status order.id %}" class="next-status save-changes"><b>Pour saisie</b></a>
 	<a href="{% url tab_orders %}" class="back">Retour aux commandes</a>
 {% else %}{% if order.status >= 1 %}
 	<a href="{{ order.get_absolute_url }}" class="disk save-changes">Enregistrer les modifications</a>
