--- a/templates/issues/index.html
+++ b/templates/issues/index.html
@@ -20,7 +20,7 @@
   </a>
 </div>
 <h1>Bugs et améliorations</h1>
-<h2>Liste des bugs</h2>
+<h2>Liste des bugs ({{issues|length}} déclarés)</h2>
 {% endblock %}
 
 {% block content %}
