--- a/templates/product/delete.html
+++ b/templates/product/delete.html
@@ -1,18 +1,17 @@
-{% extends "main_custom.html" %}
+{% extends "base_products.html" %}
 
-{% block header %}Suppression d'un produit{% endblock %}
+{% block header %}
+<h1>Gestion des produits</h1>
+<h2>Suppression d'un produit</h2>
+{% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Suppression d'un produit</h2></div>
-
 <p>La suppression d'un produit est définitive et l'ensemble
 des commandes en cours lui étant rattachées seront également supprimées.</p>
 <p>Êtes-vous sûr de vouloir supprimer ce produit ?</p>
 
-<form action="{% url product_item product.id %}" method="post">{% csrf_token %}
-  <input type="hidden" name="method" value="DELETE" />
-  <button type="submit" class="trash button">Supprimer</button>
-  <a href="{% url product_index %}" class="button">Abandonner la suppression</a>
+<form action="{% url product_delete product.id %}" method="post">{% csrf_token %}
+  <button type="submit" class="trash">Supprimer</button>
+  <a href="{% url product_index %}" class="back">Abandonner la suppression</a>
 </form>
 {% endblock %}
