--- a/templates/product/form.html
+++ b/templates/product/form.html
@@ -1,26 +1,22 @@
 {% extends "base_products.html" %}
-
 {% block product_new %}active{% endblock %}
 
 {% block header %}
-  <h1>Gestion des produits</h1>
-  <h2>Ajout d'un nouveau produit</h2>
+<h1>Gestion des produits</h1>
+<h2>Ajout d'un nouveau produit</h2>
 {% endblock %}
 
 {% block content %}
-<form action="{% url product_index %}" method="POST">{% csrf_token %}
-  {% if provider %}
-    <input type="hidden" name="provider" value="{{ provider.id }}" />
-  {% endif %}
-  <p class="instructions">
-    <em>Les champs marqués d'une étoile sont obligatoires</em>
-  </p>
-  <fieldset>
-    {% for field in form %}
-      {% include "form_snippet.html"%}
-    {% endfor %}
-  </fieldset>
-  
-  <button type="submit" class="check">Valider</button>
+<form action="{% url product_new %}" method="POST">{% csrf_token %}
+	{% if provider %}
+	  <input type="hidden" name="provider" value="{{ provider.id }}" />
+	{% endif %}
+	<p class="instructions">Les champs marqués d'une étoile sont obligatoires</p>
+	<fieldset>
+	  {% for field in form %}{% include "form_snippet.html"%}{% endfor %}
+	</fieldset>
+
+	<button type="submit" class="check">Valider</button>
+	<a href="{{prev}}" class="back">Retour</a>
 </form>
 {% endblock %}
