with fixed form

--- a/templates/budgetlines/search_form.html
+++ b/templates/budgetlines/search_form.html
@@ -21,8 +21,8 @@
         <td>{{ filter_form.budget_id }}</td>
         <td width="10%"></td>
         <td>Date (min/max):</td>
-        <td>{{ filter_form.date_created__gte }}</td>
-        <td>{{ filter_form.date_created__lte }}</td>
+        <td>{{ filter_form.date__gte }}</td>
+        <td>{{ filter_form.date__lte }}</td>
       </tr>
       <tr>
         <td>Tutelle:</td>
