--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -158,5 +158,5 @@
 	<a href="{{ order.get_absolute_url }}" class="disk save-changes">Enregistrer les modifications</a>
 	<a href="{% url tab_orders %}" class="next-status save-changes">Enregistrer et retour</a>
 	<a href="{% url tab_orders %}" class="back">Retour aux commandes</a>
-{% endif %}{% endif %}{% endif %}{% endif %}
+{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}
 </div>
