--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -92,7 +92,7 @@
 				{% else %}{% if order.status > 2 and user|has_perm:"order.custom_goto_status_4" %}
 				<a href="{% url orderitem_detail order_item.id %}?next={{next}}" class="pencil">Modifier</a>
 				<a href="{% url orderitem_delete order_item.id %}?next={{next}}" class="trash confirmDel">Supprimer</a>
-				{% endif %}{% endif %}{% endif %}{% endif %}
+				{% endif %}{% endif %}{% endif %}
 			</td>
 			{% endif %}
 		</tr>
