--- a/templates/issues/item.html
+++ b/templates/issues/item.html
@@ -41,5 +41,6 @@
   </fieldset>
   
   <button type="submit" class="check">Valider</button>
+	<a href="{% url issue_index %}" class="back">Retour</a>
 </form>
 {% endblock %}
