--- a/templates/product/form.html
+++ b/templates/product/form.html
@@ -17,6 +17,6 @@
 	</fieldset>
 
 	<button type="submit" class="check">Valider</button>
-	<a href="{{prev}}" class="back">Retour</a>
+	<a href="{% url product_index %}" class="back">Retour</a>
 </form>
 {% endblock %}
