--- a/media/css/new_login.css
+++ b/media/css/new_login.css
@@ -115,15 +115,66 @@ input.submit {
 	height: 30px;
 	display: block;
 	background: #64594e;
-	color: #282725;
+/*	color: #282725;*/
 	line-height: 32px;
-	font-size: 10px;
-	text-transform: uppercase;
-	text-indent: 90px;
+/*	font-size: 10px;*/
+/*	text-transform: uppercase;*/
+	text-indent: 30px;
 	margin-top: 10px;
 	border-top: 1px solid #968e86;
 	border-bottom: 1px solid #968e86;
 }
 #footer a {
 	color: #f65c1f;
+	text-decoration:none;
+}
+#footer a:hover {
+	font-weight:bold;
+}
+
+form.large_labels label {
+	width: 250px;
+}
+form.large_labels fieldset {
+	border: 0;
+	margin-bottom: 10px;
+}
+button.margin-left {
+	margin-left: 250px;
+}
+
+div.error {
+	background: #ffe7dc;
+	border:1px solid #FA7050;
+	color:#E2350D;
+	margin-bottom: 5px;
+	margin-right: 30px;
+	padding: 0px;
+}
+
+div.error label {
+	color: #c23c00;
+	margin-top: 6px;
+}
+div.error select {
+	margin-top: 10px;
+}
+div.error input {
+	margin-top: 6px;
+}
+
+div.error ul.errorlist {
+	float: right;
+	margin: 0;
+	padding: 0;
+}
+
+div.error ul.errorlist li {
+	border: 0;
+	list-style-type: none;
+	min-height: 28px;
+	padding: 9px 0px 0px 40px;
+	background: #ffe7dc url('../img/icons/msg-error.gif') no-repeat;
+	color: #c23c00;
+	font-size:14px;
 }
