--- a/templates/member/form.html
+++ b/templates/member/form.html
@@ -3,56 +3,52 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Gestion des commandes - Nouvel utilisateur</title>
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/login.css" type="text/css" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/form.css" type="text/css" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.12.custom.css" type="text/css" />
-    
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.5.1.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.12.custom.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
-    
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Commandes LBCMCP - création de compte</title>
+		<link rel="stylesheet" href="{{ MEDIA_URL }}css/new_login.css" type="text/css" />
+		<link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
+		
+		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.6.4.min.js"></script>
+		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
+		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
+		
+		<script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
 </head>
 
 <body>
 
-<div id="login-messages">
-  {% include "block_messages.html" %}
-  {{ form.non_field_errors }}
+<!-- start: wrapper -->
+<div id="wrapper">
+	<div id="login">
+		<div id="header"><h1>Gestion des commandes LBCMCP</h1></div>
+		<div id="in_login">
+			<div id="login_subhead">Création d'un nouveau compte</div>
+			<form action="{% url new_member %}" method="POST" accept-charset="utf-8">{% csrf_token %}
+				<input type="hidden" name="user" value="{{user_id}}" />
+				{% with form.team as field %}
+					{% include "form_snippet.html" %}
+				{% endwith %}
+				
+				{% with form.first_name as field %}
+					{% include "form_snippet.html" %}
+				{% endwith %}
+				
+				{% with form.last_name as field %}
+					{% include "form_snippet.html" %}
+				{% endwith %}
+				
+				{% with form.email as field %}
+					{% include "form_snippet.html" %}
+				{% endwith %}
+				<br />
+				<button type="submit" class="check">Valider l'enregistrement</button>
+			</form>
+		</div>
+		<div id="footer">
+			<a href="{% url django.contrib.auth.views.login %}">>> Retour à la page de connexion</a>
+		</div>
+	</div>
 </div>
-
-<div id="header">
-    <h2>Gestion des commandes LBCMCP<br />Nouvel utilisateur</h2>
-</div>
-
-<div id="new_account">
-    <div id="login">
-        <form action="{% url new_member %}" method="POST" accept-charset="utf-8">{% csrf_token %}
-          {{ form.errors }}
-          <input type="hidden" name="user" value="{{user_id}}" />
-          {% with form.team as field %}
-            {% include "form_snippet.html" %}
-          {% endwith %}
-          
-          {% with form.first_name as field %}
-            {% include "form_snippet.html" %}
-          {% endwith %}
-          
-          {% with form.last_name as field %}
-            {% include "form_snippet.html" %}
-          {% endwith %}
-          
-          {% with form.email as field %}
-            {% include "form_snippet.html" %}
-          {% endwith %}
-          <button type="submit" class="check button">Valider l'enregistrement</button>
-        </form>
-        <div id="register">
-          <a href="{% url django.contrib.auth.views.login %}">>> Retour à la page de connexion</a>
-        </div>
-    </div>
-</div>
+<!-- end: wrapper -->
 </body>
 </html>
